--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,5 +1,6 @@
 body {
-    width: 940px;
+    width: 80%;
+    max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     font-family: "Helvetica", "Lucida Grande", sans-serif;
@@ -20,6 +21,8 @@ body {
 }
 
 figure {
+    max-width: 100%;
+    box-sizing: border-box;
     margin: 30px;
     padding: 15px;
     text-align: center;
@@ -88,3 +91,35 @@ figure img {
     display: inline;
     margin-left: 1em;
 }
+
+@media (max-width: 850px) {
+    .contato__secao {
+        display: block;
+        margin-left: 1em;
+    }
+}
+
+@media (max-width: 446px) {
+    .contato__subtitulo {
+        display: block;
+        margin-bottom: 0;
+    }
+
+    .contato__info {
+        padding-left: 5px;
+        font-size: .92em;
+        border-left: 2px solid lightgray;
+    }
+
+    .rodape {
+        font-size: .92em;
+    }
+}
+
+@media (max-width: 342px) {
+    .contato__info-descricao {
+        display: block;
+        margin-left: 1em;
+    }
+}
+
