--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -92,3 +92,14 @@
     text-align: center;
 }
 
+footer {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 50px;
+    color: #fff;
+    background-color: #011c39;
+}
