--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -28,7 +28,7 @@
 .cabecalho__item-menu:hover {
     background-color: black;
     border-radius: 30px;
-    transition: 300ms;
+    transition: all 0.3s ease;
 }
 
 .cabecalho__item-menu a {
@@ -64,17 +64,18 @@
 
     margin-top: 0.5em;
 
-    border-bottom: 0.5px dotted rgb(167, 163, 163);
+    border-bottom: 0.5px dotted rgba(255,255,255,0.2);
     border-radius: 500px;
 }
 
 .item {
     padding: 0.35em;
+    transition: all 0.3s ease;
 }
 
 .item:hover, u:hover {
     color: rgb(176, 170, 170);
-    transition: 400ms;
+    padding-left: 20px;
 }
 
 .main__content {
