--- a/css/footer.css
+++ b/css/footer.css
@@ -1,44 +1,92 @@
+.footer_container {
+    max-width: 1170px;
+    margin:auto;
+}
+
+.footer_row {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+
 footer {
-    display: flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    flex-flow: row wrap;
-    padding: 50px;
-    color: #fff;
     background-color: #ffa81d;
+    padding: 70px 0 ;
 }
 
-.img__footer-left {
-    margin-bottom: 0.5em;
-    width: 50%;
+.footer_col {
+    width: 25%;
+    padding: 0 15px;
 }
 
-h2 {
-    color: #2E4255;
-    padding-bottom: 0.3em;
-    font-size: 1.5rem;
+.footer_col h4{
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
     font-weight: 500;
-    
+    position: relative;
 }
 
-.li__left {
-    margin: 0 0 0.3em 0.5em;
+.footer_col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #000000;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
 }
 
-.li__left:hover {
-    color: #2E4255;
-    transition: 400ms;
+.footer_col .footer_ul .footer_li:not(:last-child) {
+    margin-bottom: 10px;
 }
 
-.copyright__footer {
-    display: flex;
-    border-top: 1px solid black;
-    padding: 10px;
-    font-size: 12px;
+.footer_col .footer_ul .footer_li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 300;
+    color:#2c2c2c;
+    display: block;
+    transition: all 0.3s ease;
 }
 
-.Brasil {
-    padding-right: 100px;
+.footer_col .footer_ul .footer_li a:hover {
+    color: #ffffff;
+    padding-left: 10px;
+}
+
+.footer_col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255,255,255,0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #000000;
+    transition: all 0.5s ease;
+}
+
+.footer_col .social-links a:hover {
+    color: #24262b;
+    background-color: #ffffff;
+}
+
+/* responsive */
+@media(max-width: 767px) {
+    .footer_col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 574px) {
+    .footer_col {
+        width: 100%;
+    }
 }
