--- a/css/product_body.css
+++ b/css/product_body.css
@@ -49,3 +49,52 @@
     margin-left: 35px;
     font-weight: 500;
 }
+
+.main_valores .main_preco {
+    padding-top:  15px;
+    margin-left: 35px;
+}
+
+.main_valores .main_parcelas {
+    padding-top:  10px;
+    margin-left: 35px;
+    font-size: 13px;
+}
+
+.main_valores .main_preco_bloco .main_img_container {
+    padding-top: 15px;
+    margin-left: 35px;
+}
+
+.main_valores .main_preco_bloco img {
+    max-width: 150px;
+    max-height: 150px;
+    border: 1px solid black;
+    border-radius: 15%;
+}
+
+.main_valores .main_tamanho {
+    margin-left: 35px;
+    padding-top: 15px;
+}
+
+.main_valores .main_bloco_tamanho {
+    margin: auto;
+    display: flex;
+    padding-top: 15px;
+}
+
+.main_valores .main_bloco_tamanho div {
+    margin-right: 5px;
+}
+
+.main_valores .main_bloco_tamanho .bloco_tamanho_item {
+    border: 1px solid rgba(177, 177, 177, 0.441);
+    text-align: center;
+    vertical-align: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 5%;
+    font-size: 50px;
+    
+}
